<resources>
    <string name="app_name">Classic</string>
    <string name="home">Welcome Buddy!</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="hint_user_name">Enter User Name</string>
    <string name="hint_password">Enter Password</string>
    <string name="login_here">You can login or create account here!</string>
    <string name="remember_me">Remember Me</string>

    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_username">Enter User Name</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="next_btn">Next</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="otp_code_text">CO\nDE</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter OTP Sent On +919573860041</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_password_details">Provide your account phone number for which you want to reset your password!</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_email">Via Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_details">Your identity has been verified\nset your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_update">Password Updated</string>
    <string name="password_update_success_message">Your password has been updated!</string>
    <string name="registered">Registration Done</string>
    <string name="registered_done">You have registered now!</string>
    <string name="welcome">Welcome</string>
    <string name="book">Book</string>
    <string name="book_hall">Enter Details To Book Function Hall</string>
    <string name="ac">AC</string>
    <string name="non_ac">Non-AC</string>
    <string name="book_from">Book From</string>
    <string name="book_to">Book To</string>
    <string name="how_many_day">How Many Days</string>
    <string name="classic">Classic Garden</string>
    <string name="search_all">Search Here</string>
    <string name="dine">Dinning</string>
    <string name="hall">Hall</string>
    <string name="garden">Garden</string>
    <string name="more">More...</string>
    <string name="additional">Additional Details</string>
    <string name="save">Save</string>
    <string name="total_amount">Total Amount</string>
    <string name="adv_paid">Advance Paid</string>
    <string name="remaining_bal">Remaining Balance</string>
    <string name="adv_received_by">Advance Received By</string>
    <string name="bal_received_by">Balance Received By</string>
    <string name="decoration_amount">Decoration Amount</string>
    <string name="electricity_bill">Electricity Bill Amount</string>
    <string name="cleaning_charges">Cleaning Charges</string>
    <string name="waiter_amount">Waiter Amount</string>
    <string name="drinking_water">Drinking Water Amount</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="acNonAc">AC/Non-AC</string>
    <string name="update_data">Update Data</string>
    <string name="update">Update</string>
    <string name="Book_here">Book Here</string>
    <string name="generator_charges">Generator Charges</string>
    <string name="damage_charges">Damage Charges</string>
    <string name="guest_house">Guest House</string>
    <string name="VIP_dine">VIP Dine</string>
    <string name="function_type">Function Type</string>
    <string name="hall_amount">Hall Amount</string>
    <string name="address">Address</string>
    <string name="people_capacity">People Capacity</string>

    <string name="create_by">Developed By Israar Mahmood</string>


</resources>