<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".loginsignup.SuccessMessage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/back_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registered"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:textSize="30sp"
            android:layout_marginTop="-80dp"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/success_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registered_done"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_black"
            android:textSize="16sp" />
        <Button
            android:id="@+id/success_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/black"
            android:textColor="@color/white"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

</LinearLayout>