<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/recImage"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recFullName"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/full_name"
                        android:textColor="@color/lavender"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/recAcNonAc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/acNonAc"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/lavender"
                        android:textSize="16sp" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/recPhoneNumber"
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:maxLines="1"
                    android:text="@string/phone_number"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/recTotalAmount"
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:text="@string/total_amount"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/createddate"
                    android:layout_width="140dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:text="booking date"
                    android:textAlignment="center"
                    android:textColor="@color/lavender"
                    android:textSize="15sp" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>