<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".loginsignup.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/back_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/make_selection_detail"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/mobile_custom_icon" />

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_toRightOf="@id/mobile_icon"
                android:text="@string/via_sms"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/mobile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mobile_title"
                android:layout_toRightOf="@id/mobile_icon"
                android:text="9573860041"
                android:textColor="@color/black"
                android:fontFamily="@font/muli_black"
                android:textSize="25sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/mail_icon" />

            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/muli_black"
                android:layout_toRightOf="@id/mail_icon"
                android:text="@string/via_email"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/mail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_title"
                android:layout_toRightOf="@id/mail_icon"
                android:fontFamily="@font/muli_black"
                android:text="classic@gmail.com"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                 />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>